<resources>
    <string name="app_name">LatihanFragment</string>
    <string name="username">Username</string>
    <string name="enter_username">Enter username</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter password</string>
    <string name="submit">Submit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="usd_idr"><![CDATA[USD -> IDR]]></string>
    <string name="about">About</string>
    <string name="log_out">Log Out</string>
</resources>
